# python-project-83

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: page-analizer-check.yml  page-analyzer-check.yml
page_analyzer/: __init__.py  app.py  db.py  parser.py  urls.py
page_analyzer/templates/: index.html  url.html  urls.html
page_analyzer/templates/bootstrap/: base.html
